lógica de conversão e setagem dos valores concluída

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           >
           <select id="of_coin">
             <option value="DEFAULT">selecione a moeda</option>
-            <option value="BR">R$ Real brasileiro</option>
+            <option value="BRL">R$ Real brasileiro</option>
             <option value="USD">US$ Dólar americano</option>
             <option value="EUR">€ Euro</option>
           </select>
@@ -37,7 +37,7 @@
           >
           <select id="to_coin">
             <option value="DEFAULT">selecione a moeda</option>
-            <option value="BR">R$ Real brasileiro</option>
+            <option value="BRL">R$ Real brasileiro</option>
             <option value="USD">US$ Dólar americano</option>
             <option value="EUR">€ Euro</option>
           </select>
