novas imagens adicionadas e mais lógica JS adicionada

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
       </div>
       <div class="contain-result-conversion">
         <div class="contain-of-coin">
-          <img src="./img/bandeira-do-brasil.png" alt="logo da moeda de" />
+          <img
+            id="of-coin-flag"
+            src="./img/DEFAULT.svg"
+            alt="logo da moeda de"
+          />
           <span id="value-to-convert">0,00</span>
         </div>
         <div class="arow-contain">
@@ -67,7 +71,8 @@
         </div>
         <div class="contain-to-coin">
           <img
-            src="./img/european-union-flag-circular-17759.svg"
+            id="to-coin-flag"
+            src="./img/DEFAULT.svg"
             alt="logo da moeda para"
           />
           <span id="value-converted">0,00</span>
