--- a/index.html
+++ b/index.html
@@ -80,6 +80,25 @@
       </div>
     </main>
 
+    <footer class="center">
+      <p>
+        make with
+        <lord-icon
+          src="https://cdn.lordicon.com/jjoolpwc.json"
+          trigger="loop"
+          delay="1000"
+          colors="primary:#f73d93,secondary:#f73d93"
+          style="width: 30px; height: 30px; padding-top: 8px"
+        >
+        </lord-icon>
+        by
+        <a href="https://github.com/FuturoDevGalvao" target="_blank">
+          FuturoDevGalvao
+        </a>
+      </p>
+    </footer>
+
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
